<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zyuco.lab1.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/sysu"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/id_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_prompt"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title_image"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/id_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/id_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/id_prompt"
        app:layout_constraintBottom_toBottomOf="@id/id_prompt"/>

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/id_prompt"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/password_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/password_prompt"
        app:layout_constraintBottom_toBottomOf="@id/password_prompt"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_prompt"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio_student">
        <RadioButton
            android:id="@+id/radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="@string/radio_student"/>
        <RadioButton
            android:id="@+id/radio_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="@string/radio_teacher"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/button_login"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_regist"/>

    <Button
        android:id="@+id/button_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/button_regist"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/button_login"
        app:layout_constraintStart_toEndOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"/>
    

</android.support.constraint.ConstraintLayout>
